Revision history for Test::Most

0.32    2013-01-12
        - Fixed "(in cleanup) Can't use an undefined value as a subroutine
          reference" error.

0.31    2012-09-06
        - Fix "You tried to plan twice" bug (reported on #78564)

0.30    2012-09-05
        - Bugfix: Moose can now be used safely as we exclude
          Test::Deep::blessed by default (multiple reports)
        - Bugfix from Randy Stauner. Time::HiRes eval test uses $@, not @_
        - carp instead of warn (Olivier Mengué)
        - Remove autogenerated files (Olivier Mengué)

0.25    2011-08-17
        - Add timeit() function to time individual behaviours.

0.24    2011-06-18
        - Update dependencies to pick up multiple bug fixes, new behaviours,
          in various Test:: libraries.

0.23    2010-09-08
        - added "Excluding Test Symbols" feature (RT#61146, Karen Etheridge).

0.22    2010-08-07
        - Added always_explain() and always_show().
        - Apply doc fixes from ranguard. Thanks :)

0.21_04 2010-02-06
        - Give people the ability to exclude test modules in case of
          conflicts.  This is to resolve: "Prototype mismatch: sub
          main::blessed ($) vs none" error with Moose and Test::Deep.  See
          https://rt.cpan.org/Ticket/Display.html?id=54362&results=e73ff63c5bf9ba0f796efdba5773cf3f

0.21_03 2010-02-06
        - Bump up dependency on Test::Builder.  Need that for done_testing()
          and to deprecate all_done().
        - Remove strict and warnings from tests since they no longer need them
          :)
        - Decided to bump up the minimum version number for all test modules.
          This module should be "one stop shopping" for most people.
        - Moderately significant POD update.

0.21_02 2010-02-06
        - Import strict an warnings.
        - Increase version requirement for
          https://rt.cpan.org/Ticket/Display.html?id=44790  Thanks to Gerda
          Shank for that.

0.21_01 2009-02-18